input/minio-tenant/manifests/route/HTTPRoute_minio.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
  namespace: minio-tenant-default
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: default-minio-tenant-console
          port: 9090
      matches:
        - headers:
          - type: RegularExpression
            name: Host
            value: "minio\\..*"
